parte non funzionante attiva

--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
                         <img src="#" alt="logo">
                     </logo>
                     <nav class="header-nav">
-                        <!-- <ul v-for="item in headerContentNav">
+                        <ul v-for="item in headerContentNav">
                             <li>{{item}}</li>
-                        </ul> -->
-                        <ul>
-                            <li>lorem</li>
-                            <li>lorem</li>
-                            <li>lorem</li>
-                            <li>lorem</li>
-                            <li>lorem</li>
                         </ul>
+                        <!-- <ul>
+                            <li>lorem</li>
+                            <li>lorem</li>
+                            <li>lorem</li>
+                            <li>lorem</li>
+                            <li>lorem</li>
+                        </ul> -->
                     </nav>
 
                 </div>
