--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
                 <!-- .header-main (display:flex; j-c: flex-start) -->
                 <div class="header-main">
-                    <div class="description uppercase">logistic services</div>
+                    <div class="description-sentence">logistic services</div>
                     <h1 class="title uppercase">cargo<br>transport</h1>
                     <p class="mission">Fractional or exclusive road cargo transportation to all 
                        <br>regions with small, medium and large vehicles.</p>
@@ -95,7 +95,7 @@
                 <section class="first-section">
                     <!-- left-box -->
                     <div class="who left-box">
-                        <div class="description uppercase">who we are</div>
+                        <div class="description-sentence">who we are</div>
                         <h2 class="section-title"><span class="highlighted-text"><i class="far fa-gem"></i> Excellence</span> in Transport</h2>
                         <div class="text-container">
                             <p class="first-text-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. voluptates fuga voluptate, esse quisquam eaque repellat aspernatur architecto obcaecati ad.</p>
@@ -147,12 +147,36 @@
                     <!-- h2.section-title -->
                     <!-- div.container -->
                         <!-- p | button -->
+
                     <!-- div.services-container -->
                         <!-- 3div.services -->
                             <!-- div.img-container -->
                                 <!-- img | img.arrow -->
                                 <!-- h3 -->
                                 <!-- p -->
+
+            <!-- second section -->
+            <div class="second-section-container">
+                <section class="second-section">
+                    <div class="description-sentence">road transport</div>
+                    <h2 class="section-title capitalize">main <span class="highlighted-text">services</span></h2>
+                    <div class="text-container">
+                        <p class="services-text">With all of this expertise and capability comes an unrivalles commitment to customer service. We will work hard to understand your needs in order to develop a productive, long term partnership.</p>
+                        <button class="btn empty">see all</button>
+                    </div>
+                    <div class="services-container">
+                        <div class="service" v-for="service in services">
+                            <div class="img-container">
+                                <i class="{{service.icon}}" alt="service"></i>
+                                <i class="fas fa-arrow-right arrow"></i>
+                            </div>
+                            <h3 class="subsection-title capitalize">{{service.name}}</h3>
+                            <p class="subsection-text">{{service.description}}</p>
+                        </div>
+                    </div>
+
+                </section>
+            </div>
         </main>
 
 
