fatto progettazione html sixth section

--- a/index.html
+++ b/index.html
@@ -238,6 +238,33 @@
                 </section>
             </div>
 
+            <!-- sixth section -->
+            <div class="sixth-section-container">
+                <section class="sixth-section">
+
+                    <!-- div.left-box  -->
+                        <!-- div.header -->
+                            <!-- div.description -->
+                            <!-- h2.title -->
+                            <!-- div.description-text -->
+                            
+                        <!-- form -->
+
+                    <!-- div.right-box  -->
+                        <!-- h3 -->
+                        <!-- p.description-first -->
+                        <!-- p.description-second -->
+
+                        <!-- div.icon-container -->
+                            <!-- 3 icons -->
+                            
+                        <!-- button -->
+
+
+
+                </section>
+            </div>
+
 
         </main>
 
