sixth section fatta

--- a/index.html
+++ b/index.html
@@ -245,14 +245,6 @@
             <div class="sixth-section-container">
                 <section class="sixth-section">
 
-                    <!-- div.left-box  -->
-                        <!-- div.header -->
-                            <!-- div.description -->
-                            <!-- h2.title -->
-                            <!-- div.description-text -->
-                            
-                        <!-- form -->
-
                     <!-- left-box -->
                     <div class="left-box">
                         <div class="section-header">
@@ -275,7 +267,31 @@
                     </div>
 
                     <!-- right-box -->
-                    <div class="right-box"></div>
+                    <div class="right-box">
+                        <h3 class="subsection-title capitalize">example inc.</h3>
+                        <p class="description-first">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p class="descripiton-second">Inventore placeat aliquam laboriosam voluptatum provident.</p>
+
+                        <div class="contacts-container">
+                            <div class="icon-container">
+                                <i class="fas fa-phone-alt"></i> 
+                            </div>
+                            <span class="phone">{{headerContacts.tel}}</span>
+                            <br>
+                            <div class="icon-container">
+                                <i class="fas fa-envelope"></i> 
+                            </div>
+                            <span class="email">{{headerContacts.email}}</span>
+                            <br>
+                            <div class="icon-container">
+                                <i class="fas fa-map-marker-alt"></i>
+                            </div>
+                            <span class="address">{{headerContacts.address}}</span>
+                        </div>
+
+                        <button class="map btn empty">view map</button>
+
+                    </div>
                     
 
                     <!-- div.right-box  -->
