--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
 
                 </section>
             </div>
+        </main>
 
             <!-- footer -->
             <footer>
@@ -340,15 +341,20 @@
 
                 </div>
 
-                <div class="footer-bottom"></div>
+                <div class="footer-bottom-container">
+                    <div class="footer-bottom">
+                        <div class="piracy">Enjoy the low price. We are tracking any intention of piracy.</div>
+                        <div class="copyright">&#169 2020 NEXGEN is Proudly Powered by <span>Codings</span>.</div>
+                        <div class="goTop">
+                            <i class="fas fa-arrow-up"></i>
+                        </div>
+                    </div>
+                </div>
             </footer>
 
-                    <!-- div.footer-bottom -->
-
-            
+         
 
 
-        </main>
 
 
 
